fix spacing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -254,7 +254,7 @@ div.vertical-line {
 .games-overlay {
     display: flex;
     height: auto;
-    transform: translateY(69vh);
+    transform: translateY(84vh);
     place-content: center;
     gap: 10px;
     position: absolute;
@@ -296,7 +296,7 @@ div.vertical-line {
 /* MAIN */
 
 .main {
-    margin: 110px auto 100px;
+    margin: 230px auto 150px;
     max-width: 800px;
 }
 
@@ -385,7 +385,7 @@ div.vertical-line {
 
 .footer .right {
     background: var(--blue);
-    flex: 2;
+    flex: 3;
     display: flex;
     height: 52px;
 }
